canadensis_dsdl_frontend/tests/compile_fail/duplicate_fields/canadensis/DuplicateFields.1.0.uavcan

# Two fields with the same name
uint32 a
uint8 a

@extent 8 * 8